discussion/kv_engine/172594/172594_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49919: Remove engine-level background stat task creation

The frontend now creates a StatsTask to gather any bucket stats, so
creating a second task at the engine level is redundant.

Change-Id: I3fe1d68233d811f1007312207e3ea2ad7a795026

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-21 13:03:50.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-21 13:58:52.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16113/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13: error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine" [clang-diagnostic-error]
    engine->doConnAggStats(
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.h:1010:21: note: declared protected here
    cb::engine_errc doConnAggStats(const BucketStatCollector& collector,
                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16113/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13:
error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16113/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44579/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_test.cc(2133): error C2248: "EventuallyPersistentEngine::doConnAggStats": cannot access protected member declared in class "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5771/ : FAILURE

Compile error at [2022-03-21T13:35:18.931Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13:
error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5771/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18204/ : FAILURE

Compile error at [2022-03-21T13:49:31.245Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2133:76:
error: ?cb::engine_errc EventuallyPersistentEngine::doConnAggStats(const BucketStatCollector&, std::string_view)? is protected within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18204/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17883/ : FAILURE

Compile error at [2022-03-21T13:48:02.433Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2133:76:
error: ?cb::engine_errc EventuallyPersistentEngine::doConnAggStats(const BucketStatCollector&, std::string_view)? is protected within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17883/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18916/ : FAILURE

Compile error at [2022-03-21T13:47:01.864Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13:
error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18916/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26289/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16958/ : FAILURE

Compile error at [2022-03-21T13:14:30.919Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2132:13:
error: "doConnAggStats" is a protected member of "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16958/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5829/ : FAILURE

Compile error at [2022-03-21T13:08:45.324Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:2133:76:
error: ?cb::engine_errc EventuallyPersistentEngine::doConnAggStats(const BucketStatCollector&, std::string_view)? is protected within this context
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5829/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37527/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15042/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
